# cancer_incidence_mortality

./: README.md  pyproject.toml
cancer_measures/: air_pollution.py  alcohol.py  cancer.py  classification_model_comparison.csv  combine.py  data_efficiency_analysis.ipynb  diabetes.py  distillation.ipynb  dominant_cancer.py  dominant_cancer_types.csv  dominant_cancer_types_all_filled_data_profile.html  dominant_cancer_types_all_filled_rf.csv  dominant_cancers_teacher_vs_student.csv  filter.py  final_report.py  gdp.py  health_coverage.py  high_moderate_risk_countries.csv  knowledge_distillation_student_vs_teacher.ipynb  lung_cancer_pandemic_risk_index.csv  main.py  mapping.py  normalization.py  obesity.py  pandemic_index.ipynb  predict.py  predicted_cancer_data.xlsx  prediction.ipynb  regression_model_comparison.csv  report_generator.ipynb  smoking.py
cancer_measures/filtered/: report.py
cancer_measures/filtered/country/: Argentina.csv  Armenia.csv  Australia.csv  Austria.csv  (+63 more)
cancer_measures/markers/: air_pollution.py  alcohol.py  gdp.py  health_coverage.py  obesity.py  population.py  smoking.py
cancer_measures/processed/: air_pollution.csv  alcohol_use.csv  cancer_data.csv  diabetes.csv  gdp.csv  health_coverage.csv  obesity.csv  population.csv  smoking.csv
cancer_measures/raw/: ALCOHOL.csv  API_SH.PRV.xlsx  PM25_air_polution.csv  health_coverage.csv  population.csv
cancer_measures/reports/: predicted_cancer_data_profile.html
cancer_measures/step 2/: country_lung_dominance_dataset.csv  forecasting.ipynb  lung_cancer_incidence_cleaned.csv  mapping_cancers.ipynb
(+25 files in other folders)
