[project]
name = "cancer-measures"
version = "0.1.0"
description = ""
authors = [
    {name = "Amira Benamara",email = "amira.benamara@bahcesehir.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "setuptools (>=80.3.0,<81.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

